--- a/src/sass/pages/_offer.scss
+++ b/src/sass/pages/_offer.scss
@@ -7,7 +7,7 @@
 		text-transform: uppercase;
 		font-weight: 200;
 		margin-left: 20px;
-		color: $color-subtitle;
+		color: $color-link-hover;
 		font-size: 16px;
 
 		@media (max-width: $screen-xs-max) {
